--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,6 +27,8 @@
           />
         </div>
         <button type="submit" class="btn btn-primary btn-block">Login</button>
+        <br>
+        <a href="/auth/github" class="btn btn-primary" role="button">Login with Github</a>
       </form>
       <p class="mt-4">New User? <a href="/auth/register">Register</a></p>
       <p>Forgot Password? <a href="/auth/forgot">Reset</a></p>
